<resources>
    <string name="app_name">UTS_PemrogSeluler_42430007_Gabriel</string>
    <string name="logo_desc">Logo Aplikasi</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="portal_dosen">Portal Dosen</string>
    <string name="btn_masuk">MASUK</string>
    <string name="hint_nama_dosen">Masukan Nama Dosen</string>
    <string name="jumlah_mahasiswa_hint">Jumlah Mahasiswa</string>
    <string name="rata_nilai_hint">Rata-rata Nilai Kelas</string>
    <string name="btn_proses">PROSES DATA</string>
    <string name="panel_title">Panel Generator Lembar Penilaian</string>
    <string name="welcome_dosen">Selamat bertugas, Dosen %1$s</string>
    <string name="status_kelas">Status Kelas: %1$s</string>
    <string name="absen_item">Mahasiswa %1$d : __________\n</string>
    <string name="error_empty_data">Mohon isi semua data!</string>
</resources>