<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logo_desc"
            android:src="@mipmap/undiknas" />

        <TextView
            android:id="@+id/tvJudul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portal_dosen"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNamaDosen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/hint_nama_dosen"
            android:hint="@string/hint_nama_dosen"
            android:inputType="text" />

        <Button
            android:id="@+id/btnMasuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_masuk"
            android:layout_marginTop="16dp"
            android:elevation="6dp"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_gradient" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>